point meta to www non tls

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       property="og:description"
       content="Discover how Coastal Property Management can assist you with property management, construction, and landscaping services. Dedicated to serving Saint John and surrounding areas."
     />
-    <meta property="og:url" content="https://coastalpm.ca" />
+    <meta property="og:url" content="http://www.coastalpm.ca" />
     <meta
       property="og:image"
-      content="https://coastalpm.ca/images/Coastal.png"
+      content="http://www.coastalpm.ca/images/Coastal.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -186,7 +186,7 @@
               </li>
               <li>
                 <a
-                  href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
+                  href="http://www.coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
                   target="_blank"
                 >
                   <i class="fa fa-file-alt" aria-hidden="true"></i> Rental
@@ -206,7 +206,7 @@
                 </button></a
               >
               <a
-                href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal"
+                href="http://www.coastalpropertymanagementgb.managebuilding.com/Resident/portal"
                 target="_blank"
                 ><button class="sidebar-button">
                   <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Tenant
