--- a/services.html
+++ b/services.html
@@ -216,7 +216,7 @@
               </li>
               <li>
                 <a
-                  href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
+                  href="http://www.coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
                   target="_blank"
                 >
                   <i class="fa fa-file-alt" aria-hidden="true"></i> Rental
@@ -236,7 +236,7 @@
                 </button>
               </a>
               <a
-                href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal"
+                href="http://www.coastalpropertymanagementgb.managebuilding.com/Resident/portal"
                 target="_blank"
               >
                 <button class="sidebar-button">
