--- a/about.html
+++ b/about.html
@@ -61,10 +61,10 @@
       property="og:description"
       content="Discover Coastal Property Management, your expert in managing properties, construction projects, and creating stunning landscapes in Saint John, New Brunswick."
     />
-    <meta property="og:url" content="https://coastalpm.ca/about.html" />
+    <meta property="og:url" content="http://www.coastalpm.ca/about.html" />
     <meta
       property="og:image"
-      content="https://coastalpm.ca/images/Coastal.png"
+      content="http://www.coastalpm.ca/images/Coastal.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -255,7 +255,7 @@
               </li>
               <li>
                 <a
-                  href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
+                  href="http://www.coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
                   target="_blank"
                 >
                   <i class="fa fa-file-alt" aria-hidden="true"></i> Rental
@@ -275,7 +275,7 @@
                 </button></a
               >
               <a
-                href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal"
+                href="http://www.coastalpropertymanagementgb.managebuilding.com/Resident/portal"
                 target="_blank"
                 ><button class="sidebar-button">
                   <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Tenant
